--- a/lessons/python_advanced/pickle_saving_objects_for_later.ipynb
+++ b/lessons/python_advanced/pickle_saving_objects_for_later.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python Version: 3.6.9 |Anaconda, Inc.| (default, Jul 30 2019, 13:42:17) \n",
+      "[GCC 4.2.1 Compatible Clang 4.0.1 (tags/RELEASE_401/final)] \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "print(\"Python Version:\", sys.version, '\\n')"
@@ -32,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,18 +59,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'CA': [60, 7, 42, 25, 17, 0, 10, 60, 23, 61, 3, 14, 10, 53, 19, 55, 47, 14, 14, 46, 16, 18, 60, 55, 33, 22, 46, 33, 3, 5, 45, 23, 43, 39, 54, 54, 31, 2, 37, 64, 41, 60, 5, 25, 63, 6, 25, 35, 62, 17, 6, 2, 7, 60, 22, 55, 46, 60, 0, 31, 1, 15, 61, 18, 26, 45, 37, 62, 35, 36, 2, 54, 4, 29, 4, 35, 10, 24, 38, 12, 28, 14, 4, 61, 12, 14, 43, 60, 50, 16, 24, 15, 47, 23, 51, 4, 43, 48, 37, 0], 'IL': [57, 19, 12, 54, 62, 47, 30, 51, 14, 27, 13, 40, 21, 46, 15, 24, 4, 7, 17, 43, 20, 0, 26, 32, 0, 15, 21, 34, 36, 10, 14, 39, 44, 46, 42, 35, 54, 10, 13, 62, 39, 21, 29, 40, 18, 43, 2, 30, 21, 11], 'NY': [49, 18, 3, 58, 1, 36, 30, 2, 37, 40, 27, 54, 59, 54, 36, 65, 24, 40, 29, 5, 62, 9, 23, 40, 34, 11, 39, 24, 0, 28, 38, 52, 44, 63, 65, 20, 33, 20, 31, 35, 24, 63, 8, 11, 58, 6, 25, 10, 22, 18, 21, 9, 46, 46, 64, 6, 32, 20, 22, 59, 47, 16, 7, 1, 16, 6, 56, 23, 20, 30, 20, 63, 0, 0, 39, 58, 23, 14, 41, 38, 59, 40, 61, 62, 64, 54, 15, 4, 22, 5], 'WA': [40, 42, 19, 34, 55, 63, 43, 44, 4, 25, 7, 12, 7, 7, 61, 36, 52, 17, 29, 29, 34, 11, 26, 52, 35, 57, 5, 0, 14, 36, 36, 11, 57]}\n"
+     ]
+    }
+   ],
    "source": [
     "print(lots_of_noise)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Variable        Type      Data/Info\n",
+      "-----------------------------------\n",
+      "lots_of_noise   dict      n=4\n",
+      "pickle          module    <module 'pickle' from '/U<...>lib/python3.6/pickle.py'>\n",
+      "random          module    <module 'random' from '/U<...>lib/python3.6/random.py'>\n",
+      "sys             module    <module 'sys' (built-in)>\n"
+     ]
+    }
+   ],
    "source": [
     "whos"
    ]
@@ -74,9 +105,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "advanced_python_datatypes.ipynb       my_dataframe.pickle\r\n",
+      "deep_and_shallow_copy.ipynb           noise.pickle\r\n",
+      "\u001b[34mdeep_copy_demo\u001b[m\u001b[m                        pickle_saving_objects_for_later.ipynb\r\n",
+      "instructor_guide_week1_day4.md        readme.md\r\n"
+     ]
+    }
+   ],
    "source": [
     "!ls"
    ]
@@ -90,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,9 +142,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "advanced_python_datatypes.ipynb       my_dataframe.pickle\r\n",
+      "deep_and_shallow_copy.ipynb           noise.pickle\r\n",
+      "\u001b[34mdeep_copy_demo\u001b[m\u001b[m                        pickle_saving_objects_for_later.ipynb\r\n",
+      "instructor_guide_week1_day4.md        readme.md\r\n"
+     ]
+    }
+   ],
    "source": [
     "!ls"
    ]
@@ -116,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,18 +178,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Variable   Type              Data/Info\n",
+      "--------------------------------------\n",
+      "pickle     module            <module 'pickle' from '/U<...>lib/python3.6/pickle.py'>\n",
+      "random     module            <module 'random' from '/U<...>lib/python3.6/random.py'>\n",
+      "sys        module            <module 'sys' (built-in)>\n",
+      "to_write   BufferedWriter    <_io.BufferedWriter name='noise.pickle'>\n"
+     ]
+    }
+   ],
    "source": [
     "whos"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'lots_of_noise' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-69f22b4d5ca8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlots_of_noise\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'lots_of_noise' is not defined"
+     ]
+    }
+   ],
    "source": [
     "print(lots_of_noise)"
    ]
@@ -264,6 +342,11 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -274,7 +357,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
